K8S/Django-web-deploy/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-deployment
  labels:
    app: django
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: app1
        image: vleena/python-code:django-app
        ports:
        - containerPort: 8000
