K8S/Django-web-deploy/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: django-pod
spec:
  containers:
  - name: django
    image: vleena/python-code:django-app
    ports:
    - containerPort: 8000
