K8S/Django-web-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-ingress
spec:
  rules:
  - host: vleena.com
    http:
      paths:
      - pathType: Prefix
        path: "/demo"
        backend:
          service:
            name: django-service
            port:
              number: 8000
